--- a/src/components/TabsComponent.css
+++ b/src/components/TabsComponent.css
@@ -58,11 +58,12 @@
 
 .tab-content {
   flex: 1;
-  overflow: hidden;
+  overflow-y: auto;
+  min-height: 0;
 }
 
 .tab-panel {
-  height: 100%;
+  min-height: 100%;
   display: none;
 }
 
